; ModuleID = '/home/carl/AnghaBench/redis/src/extr_lazyfree.c_lazyfreeFreeSlotsMapFromBioThread.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_lazyfree.c_lazyfreeFreeSlotsMapFromBioThread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@lazyfree_objects = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lazyfreeFreeSlotsMapFromBioThread(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca i64, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  store i64 %6, i64* %3, align 8
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %8 = call i32 @raxFree(%struct.TYPE_4__* %7)
  %9 = load i32, i32* @lazyfree_objects, align 4
  %10 = load i64, i64* %3, align 8
  %11 = call i32 @atomicDecr(i32 %9, i64 %10)
  ret void
}

declare dso_local i32 @raxFree(%struct.TYPE_4__*) #1

declare dso_local i32 @atomicDecr(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
